# Code-Quality-Intelligent_Agent

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  SECURITY.md  STREAMLIT_DEPLOYMENT.md  demo_ui.py  deploy.sh  docker-compose.yml  env.example  fix_installation.ps1  fix_path_windows.ps1  fly.toml  install_global.py  pyproject.toml  render.yaml  requirements.txt  run_web_windows.ps1  setup.py  verify_installation.py
.devcontainer/: devcontainer.json
.github/workflows/: cq-agent.yml
.streamlit/: config.toml
assignment-docs/: Atlan AI Engineering Internship Challenge - 2025.docx
deployement-docs/: CLEAR_STREAMLIT_CACHE.md  DISK_SPACE_FIX.md  INSTALL.md  QUICK_START.md  RELEASE_NOTES.md
docs-generated/: DEMO_SCRIPT.md  report.md  report.sarif  security.sarif
sample-outputs/: cq-report.md  cq-report.sarif
src/cq_agent/: __main__.py
src/cq_agent/agents/: __init__.py  langgraph_trends.py  reasoning.py
src/cq_agent/ai/: __init__.py  agent_qa.py  deepseek.py  local_llm.py
src/cq_agent/analyzers/: __init__.py  ast_analysis.py  issue.py  js_analyzers.py  python_analyzers.py
src/cq_agent/autofix/: __init__.py  auto.py
src/cq_agent/cli/: __main__.py  main.py
src/cq_agent/graph/: __init__.py  deps.py
src/cq_agent/ingestion/: __init__.py  reader.py
src/cq_agent/integrations/: __init__.py  github.py
src/cq_agent/metrics/: __init__.py  metrics.py
src/cq_agent/qa/: __init__.py  embeddings.py  index.py
src/cq_agent/rag/: __init__.py  faiss_index.py  faiss_index_broken.py
src/cq_agent/reporting/: __init__.py  markdown.py  (+1 more)
(+9 files in other folders)
